force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <label>Form</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>