force-app/main/default/objects/Form__c/fields/Absence_Type__c.field-meta.xml
<CustomField>
    <fullName>Absence_Type__c</fullName>
    <label>Absence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent Reported</fullName>
            </value>
            <value>
                <fullName>Teacher Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>