force-app/main/default/objects/Form__c/fields/Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income__c</fullName>
    <label>Annual Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-16.900</fullName>
            </value>
            <value>
                <fullName>$16,901-21,300</fullName>
            </value>
            <value>
                <fullName>$21,301-25,750</fullName>
            </value>
            <value>
                <fullName>$25,751-30,700</fullName>
            </value>
            <value>
                <fullName>$30,701-34,590</fullName>
            </value>
            <value>
                <fullName>$34,591-39,000</fullName>
            </value>
            <value>
                <fullName>$39,001-45,000</fullName>
            </value>
            <value>
                <fullName>$45,001-$75,000</fullName>
            </value>
            <value>
                <fullName>$75,001-100,000</fullName>
            </value>
            <value>
                <fullName>+$100,000</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>