force-app/main/default/objects/Form__c/fields/Annual_Household_Income_Before_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income_Before_Taxes__c</fullName>
    <label>Annual Household Income Before Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>