force-app/main/default/objects/Form__c/fields/Assumption_of_Risk_Initials__c.field-meta.xml
<CustomField>
    <fullName>Assumption_of_Risk_Initials__c</fullName>
    <label>Assumption of Risk Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>