force-app/main/default/objects/Form__c/fields/Attended_Session__c.field-meta.xml
<CustomField>
    <fullName>Attended_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Session?</label>
    <type>Checkbox</type>
</CustomField>