force-app/main/default/objects/Form__c/fields/Child_3_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Last_Name__c</fullName>
    <label>Child #3 Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>