force-app/main/default/objects/Form__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Forms (Child)</relationshipLabel>
    <relationshipName>Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>