force-app/main/default/objects/Form__c/fields/Children_s_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Children_s_Ethnicity__c</fullName>
    <label>Children&apos;s Ethnicity?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latina/o/x</fullName>
            </value>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>