force-app/main/default/objects/Form__c/fields/Consent_for_Assessment_Initials__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Assessment_Initials__c</fullName>
    <label>Consent for Assessment Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>