force-app/main/default/objects/Form__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>