force-app/main/default/objects/Form__c/fields/Emergency_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_City__c</fullName>
    <label>Emergency Contact City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>