force-app/main/default/objects/Form__c/fields/Emergency_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_First_Name__c</fullName>
    <label>Emergency Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>