force-app/main/default/objects/Form__c/fields/Emergency_Contact_Same_as_Parent__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Same_as_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Contact Same as Parent</label>
    <type>Checkbox</type>
</CustomField>