force-app/main/default/objects/Form__c/fields/Emergency_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Street__c</fullName>
    <label>Emergency Contact Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>