force-app/main/default/objects/Form__c/fields/Employee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employee_Notes__c</fullName>
    <label>Employee Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>