force-app/main/default/objects/Form__c/fields/Food_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps__c</fullName>
    <label>Food Stamps?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>