force-app/main/default/objects/Form__c/fields/Form_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Signature_Date__c</fullName>
    <label>Form Signature Date</label>
    <type>Date</type>
</CustomField>