force-app/main/default/objects/Form__c/fields/Free_or_Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Free_or_Reduced_Lunch__c</fullName>
    <label>Free or Reduced Lunch?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>