force-app/main/default/objects/Form__c/fields/From_Portal__c.field-meta.xml
<CustomField>
    <fullName>From_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Portal?</label>
    <type>Checkbox</type>
</CustomField>