force-app/main/default/objects/Form__c/fields/Household_Size_Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Household_Size_Number_of_Children__c</fullName>
    <label>Household Size: Number of Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>