force-app/main/default/objects/Form__c/fields/How_Many_Children_in_Household__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Children_in_Household__c</fullName>
    <label>How Many Children in Household</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>