force-app/main/default/objects/Form__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>What language(s) do you speak at home?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>