force-app/main/default/objects/Form__c/fields/Languages_Spoken_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken_at_Home__c</fullName>
    <label>Languages Spoken at Home</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Ewe</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Twi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>