force-app/main/default/objects/Form__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <label>Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>