force-app/main/default/objects/Form__c/fields/Medical_Authorization_Initials__c.field-meta.xml
<CustomField>
    <fullName>Medical_Authorization_Initials__c</fullName>
    <label>Medical Authorization Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>