force-app/main/default/objects/Form__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <label>Other Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>