force-app/main/default/objects/Form__c/fields/Other_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Other_Pronouns__c</fullName>
    <label>Other Pronouns</label>
    <length>80</length>
    <type>Text</type>
</CustomField>