force-app/main/default/objects/Form__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>