force-app/main/default/objects/Form__c/fields/Parent_Guardian_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_First_Name__c</fullName>
    <label>Parent/Guardian First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>