force-app/main/default/objects/Form__c/fields/Parent_Guardian_State__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_State__c</fullName>
    <label>Parent/Guardian State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>