force-app/main/default/objects/Form__c/fields/Parent_Guardian_Street__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Street__c</fullName>
    <label>Parent/Guardian Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>