force-app/main/default/objects/Form__c/fields/Parent_Guardian_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Zip_Code__c</fullName>
    <label>Parent/Guardian Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>