force-app/main/default/objects/Form__c/fields/Preferred_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact__c</fullName>
    <label>Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>