force-app/main/default/objects/Form__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Engagement</label>
    <referenceTo>Program_Engagement__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>