force-app/main/default/objects/Form__c/fields/Programs_that_Apply_to_Children__c.field-meta.xml
<CustomField>
    <fullName>Programs_that_Apply_to_Children__c</fullName>
    <label>Programs that Apply to Children</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North (Uptown) - CYC (ages 8-18)</fullName>
            </value>
            <value>
                <fullName>North (Uptown) - CYC - Minis (ages 5-7)</fullName>
            </value>
            <value>
                <fullName>North (Uptown) - CYC - Tots (ages 3-5)</fullName>
            </value>
            <value>
                <fullName>North (Uptown) - Performance Troupe - Club</fullName>
            </value>
            <value>
                <fullName>North (Uptown) - Performance Troupe - Team</fullName>
            </value>
            <value>
                <fullName>West (Humboldt Park) - CYC (ages 8-18)</fullName>
            </value>
            <value>
                <fullName>West (Humboldt Park) - CYC - Minis (ages 5-7)</fullName>
            </value>
            <value>
                <fullName>West (Humboldt Park) - Performance Troupe - Club</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - Uptown</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - Gage Park (Sawyer)</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - Garfield Park (Hefferan)</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - Humboldt Park (Morton)</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - North Lawndale (Kellman)</fullName>
            </value>
            <value>
                <fullName>HomeWork &amp; CircusWork - Rogers Park (Jordan)</fullName>
            </value>
            <value>
                <fullName>Summer Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>