force-app/main/default/objects/Form__c/fields/QueueId__c.field-meta.xml
<CustomField>
    <fullName>QueueId__c</fullName>
    <label>QueueId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>