force-app/main/default/objects/Form__c/fields/Race_Children_Identifies_As__c.field-meta.xml
<CustomField>
    <fullName>Race_Children_Identifies_As__c</fullName>
    <label>Race Children Identify As</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Mexican American</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White or Caucasian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>