force-app/main/default/objects/Form__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>80</length>
    <type>Text</type>
</CustomField>