force-app/main/default/objects/Form__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <length>80</length>
    <type>Text</type>
</CustomField>