force-app/main/default/objects/Form__c/fields/Specifcy_Other_Race__c.field-meta.xml
<CustomField>
    <fullName>Specifcy_Other_Race__c</fullName>
    <label>Specifcy Other Race</label>
    <length>20</length>
    <type>Text</type>
</CustomField>