force-app/main/default/objects/Form__c/fields/Waiver_of_Liability_Initials__c.field-meta.xml
<CustomField>
    <fullName>Waiver_of_Liability_Initials__c</fullName>
    <label>Waiver of Liability Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>