force-app/main/default/objects/Form__c/fields/What_is_your_child_s_ethnicity__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_child_s_ethnicity__c</fullName>
    <label>What is your child&apos;s ethnicity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latina/o/x</fullName>
            </value>
            <value>
                <fullName>Non-Hispanic</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>