force-app/main/default/objects/Form__c/fields/What_race_does_your_child_identify_as__c.field-meta.xml
<CustomField>
    <fullName>What_race_does_your_child_identify_as__c</fullName>
    <label>What race does your child identify as?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race</valueSetName>
    </valueSet>
</CustomField>