force-app/main/default/objects/Form__c/fields/What_Should_We_Know_About_Your_Child__c.field-meta.xml
<CustomField>
    <fullName>What_Should_We_Know_About_Your_Child__c</fullName>
    <label>What Should We Know About Your Children</label>
    <type>TextArea</type>
</CustomField>