force-app/main/default/objects/Form__c/recordTypes/Absence.recordType-meta.xml
<RecordType>
    <fullName>Absence</fullName>
    <active>true</active>
    <label>Absence</label>
</RecordType>