force-app/main/default/objects/Form__c/recordTypes/Attendance.recordType-meta.xml
<RecordType>
    <fullName>Attendance</fullName>
    <active>true</active>
    <label>Attendance</label>
</RecordType>