force-app/main/default/objects/Form__c/recordTypes/Birthday_Workshop.recordType-meta.xml
<RecordType>
    <fullName>Birthday_Workshop</fullName>
    <active>true</active>
    <label>Birthday/Workshop</label>
</RecordType>