force-app/main/default/objects/Form__c/recordTypes/Financial_Aid.recordType-meta.xml
<RecordType>
    <fullName>Financial_Aid</fullName>
    <active>true</active>
    <label>Financial Aid</label>
</RecordType>