force-app/main/default/objects/Form__c/recordTypes/General_Release.recordType-meta.xml
<RecordType>
    <fullName>General_Release</fullName>
    <active>true</active>
    <label>General Release</label>
</RecordType>