force-app/main/default/objects/Form__c/recordTypes/Intake.recordType-meta.xml
<RecordType>
    <fullName>Intake</fullName>
    <active>true</active>
    <label>Intake</label>
</RecordType>