force-app/main/default/objects/Form__c/recordTypes/Pickup_Instructions.recordType-meta.xml
<RecordType>
    <fullName>Pickup_Instructions</fullName>
    <active>true</active>
    <label>Pickup Instructions</label>
</RecordType>