force-app/main/default/objects/Form__c/recordTypes/Program_Application.recordType-meta.xml
<RecordType>
    <fullName>Program_Application</fullName>
    <active>true</active>
    <label>Program Application</label>
</RecordType>