force-app/main/default/objects/Form__c/recordTypes/Withdrawal_Request.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal_Request</fullName>
    <active>true</active>
    <label>Withdrawal Request</label>
</RecordType>