force-app/main/default/objects/Form__c/validationRules/Financial_Aid_Approved_Credit_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Aid_Approved_Credit_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Financial_Aid&apos;,
    ISPICKVAL(Status__c, &apos;Approved&apos;),
    ISBLANK(TEXT(Credit_Percentage__c))
)</errorConditionFormula>
    <errorMessage>You must provide a credit percentage before approving a financial aid applicaiton</errorMessage>
</ValidationRule>