force-app/main/default/objects/Form__c/validationRules/Withdrawal_Approved_Credit_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Withdrawal_Approved_Credit_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Withdrawal_Request&apos;,
    ISPICKVAL(Status__c, &apos;Approved&apos;),
    ISBLANK(Credit_Amount__c)
)</errorConditionFormula>
    <errorMessage>Credit amount must be filled out to approve a withdrawal</errorMessage>
</ValidationRule>