force-app/main/default/objects/Form__c/listViews/Absences.listView-meta.xml
<ListView>
    <fullName>Absences</fullName>
    <columns>NAME</columns>
    <columns>Child__c</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Details__c</columns>
    <columns>Program_Engagement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Form__c.Absence</value>
    </filters>
    <label>Absences</label>
</ListView>